--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,9 @@
         <!-- Needs images, font... therefore can not be part of main.css -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500,700,300,300italic,500italic|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
         <!-- end Needs images -->
+
+            
             <!-- build:css({.tmp,app}) styles/main.css -->
             <link rel="stylesheet" href="bower_components/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" />
             <link rel="stylesheet" href="bower_components/angular-upload/src/directives/btnUpload.min.css">
@@ -114,6 +115,8 @@
         <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
         <script src="bower_components/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
         <script src="bower_components/angular-upload/angular-upload.js"></script>
+                    
+        <script src="bower_components/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
         <!-- endbuild -->
 
 
